--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@nestjs/common": "^10.0.0",
 		"@nestjs/config": "^3.1.1",
 		"@nestjs/core": "^10.0.0",
+		"@nestjs/mapped-types": "*",
 		"@nestjs/microservices": "^10.2.7",
 		"@nestjs/platform-express": "^10.0.0",
 		"amqp-connection-manager": "^4.1.14",
@@ -39,6 +40,7 @@
 		"@types/express": "^4.17.17",
 		"@types/jest": "^29.5.2",
 		"@types/node": "^20.3.1",
+		"@types/nodemailer": "^6.4.13",
 		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
