feat: local.env | update: README.md

--- a/.local.env
+++ b/.local.env
@@ -1,5 +1,7 @@
+# Touch .env file & copy paste environments
+
 # rabbitmq
-RMQ_HOST=amqp://guest:guest@localhost:5672
+RMQ_HOST=amqp://admin:admin@localhost:5672
 RMQ_QUEUE=mailer
 
 # nodemailer
